
  [ Matthias Klose ]
  * Update packaging, patches and symbols files.
  * Remove libmpx packaging, removed upstream.
  * Update newlib to the newlib-3.0.0.20180831 snapshot.
  * Disable building Ada for now.
  * Build D and libphobos from the now integrated upstream sources.
  * gcc-9-base: Break gnat (<< 7). Addresses: #911633.
  * gdc: Dynamically link the phobos library.

  [ Nicolas Boulenguez ]
  * Update Ada patches.

 -- Matthias Klose <doko@debian.org>  Sat, 10 Nov 2018 09:08:36 +0100

gcc-8 (8.2.0-8.1) UNRELEASED; urgency=medium

  * Update to SVN 20181020 (r265339) from the gcc-8-branch.
    - Fix PR middle-end/87087, PR middle-end/87623, PR libstdc++/87641,
      PR middle-end/87645.
  * Update VCS attributes in the control file.
  * Don't configure native builds with --with-sysroot. Apparently this cannot
    be completely overridden with the command line option --sysroot.

 -- Matthias Klose <doko@debian.org>  Sat, 20 Oct 2018 09:25:48 +0200

gcc-8 (8.2.0-8) unstable; urgency=medium

  * Update to SVN 20181017 (r265234) from the gcc-8-branch.
    - Fix PR libstdc++/86751, PR libstdc++/78595, PR libstdc++/87061,
      PR libstdc++/70966, PR libstdc++/77854, PR libstdc++/87538,
      PR libgcc/85334, PR middle-end/63155, PR target/87511 (AArch64),
      PR middle-end/87610, PR tree-optimization/87465, PR target/87550 (x86),
      PR target/87414 (x86), PR tree-optimization/86844, PR target/86731 (PPC),
      PR target/87370 (x86), PR target/87517 (x86), PR target/87522 (x86),
      PR other/87353, PR gcov-profile/86109, PR target/82699 (x86),
      PR target/87467 (x86), PR target/87033 (PPC), PR sanitizer/85774,
      PR rtl-optimization/86882, PR gcov-profile/85871, PR c++/87582,
      PR c++/84940, PR gcov-profile/86109, PR c++/85070, PR c++/86881,
      PR fortran/83999, PR fortran/86372, PR fortran/86111, PR fortran/85395,
      PR fortran/86830, PR fortran/85954.

 -- Matthias Klose <doko@debian.org>  Wed, 17 Oct 2018 09:45:31 +0200
