@@ -105,7 +105,7 @@ Package: gcc-snapshot`'TS
 Architecture: any
 Section: devel
 Priority: optional
-Depends: binutils`'TS (>= ${binutils:Version}), ${dep:libcbiarchdev}, ${dep:libcdev}, ${dep:libunwinddev}, ${snap:depends}, ${shlibs:Depends}, ${dep:ecj}, python, ${misc:Depends}
+Depends: binutils`'TS (>= ${binutils:Version}), ${dep:libcbiarchdev}, ${dep:libcdev}, ${dep:libunwinddev}, ${snap:depends}, ${shlibs:Depends}, python3, ${misc:Depends}
 Recommends: ${snap:recommends}
 Suggests: ${dep:gold}
 Provides: c++-compiler`'TS`'ifdef(`TARGET',`',`, c++abi2-dev')
