@@ -1,5 +1,6 @@
 #! /bin/sh -e
 
-rm -f /usr/lib/gcc-snapshot/share/python/*.py[co]
+find /usr/lib/gcc-snapshot/share/python -name '*.py[co]' | xargs -r rm -f
+find /usr/lib/gcc-snapshot/share/python -name __pycache__ -type d | xargs -r rm -rf
 
 #DEBHELPER#
