@@ -916,7 +916,7 @@ endif
 
 # D ---------------------------
 d_no_cross := yes
-d_no_snap := yes
+d_no_snap :=
 d_no_cpus := s390
 
 ifneq ($(single_package),yes)
@@ -962,6 +962,7 @@ endif
 
 ifeq ($(with_d),yes)
   libphobos_archs = amd64 arm64 armel armhf i386 x32 kfreebsd-amd64 kfreebsd-i386
+  libphobos_archs += mips mipsel mips64el
   ifneq (,$(libphobos_archs))
     with_phobos := yes
   endif
@@ -970,7 +971,7 @@ ifeq ($(with_d),yes)
   endif
 
   libphobos_no_cpus := alpha avr arm64 hppa ia64 m68k \
-	mips mipsel mips64 mips64el mipsn32 mipsn32el \
+	mips64 mipsn32 mipsn32el \
 	mipsr6 mipsr6el mips64r6 mips64r6el mipsn32r6 mipsn32r6el \
 	powerpc powerpcspe ppc64 s390 s390x sh4 sparc sparc64
   libphobos_no_systems := gnu kfreebsd-gnu
