@@ -142,23 +142,18 @@ ifeq ($(with_ada),yes)
     debian_patches += ada-749574
 endif
 
-ifeq ($(with_d),yes)
-  debian_patches += \
-	gdc-dynamic-link-phobos \
-	libphobos-zlib \
-
+# FIXME: still relevant?
 #	gdc-updates \
 #	gdc-multiarch
 
-  ifeq ($(GFDL_INVARIANT_FREE),yes)
-    debian_patches += gdc-texinfo
-  endif
-  ifneq ($(with_libphobos),yes)
-    debian_patches += gdc-driver-nophobos
-  endif
-  ifeq (,$(filter $(DEB_TARGET_ARCH),amd64 i386 armhf))
-    debian_patches += disable-gdc-tests
-  endif
+ifeq ($(GFDL_INVARIANT_FREE),yes)
+  debian_patches += gdc-texinfo
+endif
+ifneq ($(with_libphobos),yes)
+  debian_patches += gdc-driver-nophobos
+endif
+ifeq (,$(filter $(DEB_TARGET_ARCH),amd64 i386 armhf))
+  debian_patches += disable-gdc-tests
 endif
 
 ifeq ($(DEB_TARGET_ARCH),alpha)
@@ -180,6 +175,8 @@ endif
 
 debian_patches += \
 	sys-auxv-header \
+	gdc-dynamic-link-phobos \
+	libphobos-zlib \
 
 ifeq ($(with_ibm_branch),yes)
   debian_patches += ibm-branch
