@@ -10,6 +10,7 @@ gcc-9 (9-20181110-1) UNRELEASED; urgency=medium
   * Build D and libphobos from the now integrated upstream sources.
   * gcc-9-base: Break gnat (<< 7). Addresses: #911633.
   * gdc: Dynamically link the phobos library.
+  * Adopt gcc-snapshot build for the current trunk.
 
   [ Nicolas Boulenguez ]
   * Update Ada patches.
